--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.discussion__head {
+  margin-bottom: 40px;
+
+  @include mobile {
+    margin-bottom: 32px;
+  }
+}
+
 .discussion__archive-link {
   @media (max-width: $tablet-width - 1) {
     display: none;
@@ -19,19 +27,18 @@
 .discussion__list {
   margin: 0;
   padding: 0;
-  padding-top: 16px;
   padding-bottom: 48px;
 
   list-style: none;
 
   @media (max-width: $tablet-width - 1) {
-    padding-top: 8px;
     padding-bottom: 33px;
   }
 }
 
 .discussion__item {
   position: relative;
+
   padding-top: 24px;
   padding-bottom: 32px;
 
@@ -39,6 +46,10 @@
 
   @media (max-width: $desktop-width - 81) {
     padding-bottom: 31px;
+  }
+
+  &:first-child {
+    padding-top: 0;
   }
 
   &--used {
@@ -50,6 +61,7 @@
   &:hover {
     .button-star:not(.button-star--active) {
       color: $light-grey;
+
       opacity: 1;
 
       &:hover {
@@ -166,12 +178,13 @@
 
 .discussion .button-star {
   position: absolute;
-  right: 0;
   top: 50%;
-  transform: translateY(-50%);
+  right: 0;
 
   display: block;
   padding: 0;
+
+  transform: translateY(-50%);
 
   &:hover {
     color: var(--color-interactive-accent, $blue-accent);
@@ -185,10 +198,10 @@
 .discussion__button {
   // padding: 16px 24px 15px;
   display: block;
-  max-width: 420px;
   width: 100%;
-  margin: 0 auto;
   width: auto;
+  max-width: 420px;
+  margin: 0 auto;
 
   .discussion__hide {
     padding: 0;
@@ -215,7 +228,7 @@
   padding: 0;
 
   & .discussion__list {
-    padding-top: 5px;
+    padding-top: 0;
     padding-bottom: 0;
 
     @media (max-width: $mobile-max-width) {
@@ -246,8 +259,9 @@
   }
 
   .discussion__item {
-    page-break-inside: avoid;
     break-inside: avoid;
+
+    page-break-inside: avoid;
 
     & .discussion__used {
       display: none;
