--- a/source/sass/blocks/proposal-list.scss
+++ b/source/sass/blocks/proposal-list.scss
@@ -34,6 +34,11 @@
 
     border-top: 1px solid var(--color-stroke, $light-grey);
   }
+
+  &--without-counter {
+    display: flex;
+    flex-flow: column nowrap;
+  }
 }
 
 .proposal-list__wrapper {
