--- a/source/sass/blocks/multiple-select.scss
+++ b/source/sass/blocks/multiple-select.scss
@@ -2,19 +2,23 @@
   --colNum: 1;
   --colWidth: 264px;
   --columnGap: 48px;
+  --listPadding: 24px;
   --maxHeight: auto;
-
 
   width: auto;
   max-width: 100%;
 
+  @include mobile {
+    --listPadding: 16px;
+  }
+
   &.two-column {
-    --maxHeight: 324px;
     --colNum: 2;
+    --maxHeight: 324px;
 
     @include mobile {
-      --maxHeight: 400px;
       --colNum: 1;
+      --maxHeight: 400px;
     }
   }
 
@@ -22,13 +26,12 @@
     --colNum: 3;
 
     @include tablet {
-      --maxHeight: 324px;
       --colNum: 2;
+      --maxHeight: 324px;
     }
-
     @include mobile {
-      --maxHeight: 400px;
       --colNum: 1;
+      --maxHeight: 400px;
     }
   }
 
@@ -36,59 +39,84 @@
     --maxHeight: 324px;
   }
 
-  .ss-content {
-    left: -21px;
-    top: 31px;
-    z-index: 10;
-    width: unset;
-    max-height: var(--maxHeight);
-    padding: 16px 24px 24px;
-    border: none;
-    background-color: var(--color-bg-secondary, $color-bg);
-    box-shadow: 0px 2px 4px rgba(0, 30, 75, 0.15);
+  .scrollbar-track {
+    width: 10px;
+
+    background-color: transparent;
+  }
+
+  .scrollbar-thumb {
+    width: 6px;
+
+    background-color: $light-grey;
     border-radius: 5px;
-    overflow-y: auto;
+  }
+
+  .ss-content {
+    top: 31px;
+    left: -21px;
+    z-index: 10;
+
+    width: calc(var(--colWidth) * var(--colNum) + var(--columnGap) * (var(--colNum) - 1) + (var(--listPadding) * 2));
+    max-height: var(--maxHeight);
+    padding: 0;
+    overflow-x: hidden;
+
+    background-color: var(--color-bg-secondary, $color-bg);
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
+
+    .ss-search {
+      display: none;
+    }
 
     .ss-list {
       position: static;
-      width: calc(var(--colWidth) * var(--colNum) + var(--columnGap) * (var(--colNum) - 1));
+
+      width: calc(var(--colWidth) * var(--colNum) + var(--columnGap) * (var(--colNum) - 1) + (var(--listPadding) * 2));
       max-width: 936px;
       max-height: initial;
+      padding: 16px var(--listPadding) 24px;
+
       column-count: var(--colNum);
-      column-width: var(--colWidth);
       column-gap: var(--columnGap);
+      column-width: var(--colWidth);
 
       @include mobile {
-        width: 100%;
+        width: 288px;
       }
 
       .ss-option {
+        break-inside: avoid;
+
         position: relative;
+
         padding: 8px 10px 8px 28px;
 
         font-size: 15px;
         line-height: 20px;
         color: var(--color-text, $dark-text);
+
         border-radius: 5px;
 
         transition: background-color $style-change-duration color $style-change-duration;
 
-        break-inside:avoid;
-
         &::after {
-          content: '';
+          content: "";
           position: absolute;
-          opacity: 0;
-
-          left: 0;
           top: 50%;
+          left: 0;
+
           width: 12px;
           height: 12px;
+
           background-image: url(../img/icon-tick.svg);
           background-repeat: no-repeat;
           background-position: center;
           background-size: cover;
           transform: translateY(-50%) translateX(50%);
+          opacity: 0;
 
           transition: opacity $style-change-duration;
         }
@@ -97,13 +125,15 @@
         &:focus:not(.focus-visible),
         &:active:not(.focus-visible),
         &:hover:not(.focus-visible) {
-          background-color: var(--color-bg-secondary, #eff1f4);
           color: var(--color-text, $blue-default);
+
+          background-color: var(--color-bg-secondary, #eff1f4);
         }
       }
 
       .ss-option:not(.ss-disabled).ss-option-selected {
         color: var(--color-interactive-accent, $blue-accent);
+
         background-color: transparent;
         &:after {
           opacity: 1;
@@ -113,9 +143,10 @@
   }
 
   .ss-multi-selected {
-    border: none;
     min-height: initial;
     padding: 0;
+
+    border: none;
 
     .ss-values {
       display: none;
@@ -123,26 +154,29 @@
 
     .ss-add {
       position: relative;
-      display: flex;
-      flex-flow: row nowrap;
-      align-items: center;
-      justify-content: flex-start;
 
+      display: flex;
       flex: initial;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+      align-items: center;
       margin: 0;
 
       .ss-plus {
         all: revert;
 
         margin-right: 8px;
-        @include font;
+        overflow: hidden;
+
         font-size: 15px;
         line-height: 20px;
         color: var(--color-interactive-default, $blue-default);
-        border-bottom: 2px dashed var(--color-interactive-default, $blue-default);
-        overflow: hidden;
-        text-overflow: ellipsis;
         white-space: nowrap;
+        text-overflow: ellipsis;
+
+        border-bottom: 2px dashed var(--color-interactive-default, $blue-default);
+
+        @include font;
 
         &:after {
           all: revert;
@@ -150,8 +184,9 @@
       }
 
       svg {
-        transition: transform $style-change-duration;
         transform: rotate(180deg);
+
+        transition: transform $style-change-duration;
       }
 
       .ss-plus.ss-cross {
@@ -160,23 +195,24 @@
 
       .ss-deselect-all {
         position: relative;
+
         width: 12px;
         height: 12px;
         margin-right: 10px;
-
         padding: 0;
+
+        background-color: transparent;
         border: none;
         outline: none;
-        background-color: transparent;
-
         cursor: pointer;
 
         &::after,
         &::before {
-          content: '';
+          content: "";
           position: absolute;
           top: calc(50% - 1px);
           left: 0;
+
           width: 14px;
           height: 2px;
 
@@ -208,4 +244,3 @@
     }
   }
 }
-
