вешает листнер на кнопку удаления

--- a/source/components/buttons-wrapper.html
+++ b/source/components/buttons-wrapper.html
@@ -1,6 +1,6 @@
 <div class="buttons-wrapper">
   <button type="button" class="button button--white">Отменить</button>
-  <button type="button" class="button-remove">
+  <button type="button" class="button-remove" data-modal="confirmation">
     <svg width="16" height="16" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M7 7H5v6h2V7zM11 7H9v6h2V7z" fill="#2C8ECC" />
       <path
@@ -9,7 +9,7 @@
     </svg>
     <span>Удалить черновик</span>
   </button>
-  <button type="button" class="buttons-wrapper__submit-btn button button--blue" id="improvement-submit-btn">
+  <button type="button" class="buttons-wrapper__submit-btn button button--blue" id="improvement-submit-btn" data-modal="confirmation">
     Отправить на модерацию
   </button>
 </div>
