--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -42,7 +42,6 @@
 }
 
 .additional__link {
-  display: initial;
-
+  color: var(--color-interactive-default, $blue-default);
   @include font-h5;
 }
