--- a/source/sass/blocks/rating-list.scss
+++ b/source/sass/blocks/rating-list.scss
@@ -13,15 +13,14 @@
 }
 
 .rating-list__item {
-  padding: 30px 0 34px;
+  padding: 31px 0 31px;
   width: 100%;
 
   border-top: 1px solid var(--color-stroke, $light-grey);
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
-  &:first-child {
+  &--no-border {
     padding-top: 0;
-    padding-bottom: 30px;
     border-top: none;
   }
 
@@ -34,6 +33,22 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
+  }
+
+  @include tablet {
+    padding: 32px 0;
+
+    &--no-border {
+      padding-top: 0;
+    }
+  }
+
+  @include mobile {
+    padding: 23px 0;
+
+    &--no-border {
+      padding-top: 0;
+    }
   }
 }
 
@@ -78,6 +93,10 @@
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
     width: 100%;
     margin-bottom: 24px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   @media (max-width: $mobile-max-width) {
@@ -108,6 +127,10 @@
   @media (max-width: $tablet-width - 1) {
     display: block;
     margin-bottom: 22px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
