--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -25,6 +25,7 @@
 }
 
 .page-nav__item {
+  position: relative;
   margin: 0 24px;
 
   @media (max-width: $tablet-width - 1) {
@@ -59,4 +60,30 @@
   .page-nav {
     display: none;
   }
+}
+
+.page-nav__radio-input {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+.page-nav__radio-label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
