--- a/source/sass/blocks/area-improvement.scss
+++ b/source/sass/blocks/area-improvement.scss
@@ -119,6 +119,11 @@
     width: 8px;
     height: 8px;
   }
+
+  .ss-main .ss-single-selected .placeholder .ss-disabled {
+    font-size: rem(15px);
+    line-height: 135%;
+  }
 }
 
 .area-improvement__paginator {
