--- a/source/sass/blocks/area-improvement.scss
+++ b/source/sass/blocks/area-improvement.scss
@@ -87,7 +87,7 @@
     padding: 15px 16px 15px 23px;
 
     @media (max-width: $tablet-width - 1) {
-      justify-content: center;
+      // justify-content: center;
       padding: 15px 16px;
     }
   }
