--- a/source/sass/blocks/category-list.scss
+++ b/source/sass/blocks/category-list.scss
@@ -77,6 +77,13 @@
 
   @media (hover: none) {
     &--is-done {
+
+      @media (max-width: $desktop-width - 1px) {
+        .category-list__link {
+          padding-right: 20px;
+        }
+      }
+
       @media (max-width: $tablet-max-width - 1px) {
         box-shadow: unset;
         top: 70%;
@@ -248,7 +255,7 @@
   width: 100%;
   height: 100%;
   min-height: 88px;
-  padding: 20px 36px 20px 72px;
+  padding: 20px 20px 20px 72px;
 
   text-decoration: none;
 
