--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -107,6 +107,8 @@
 @import 'blocks/curator';
 @import 'blocks/project-rules';
 @import 'blocks/additional';
+@import 'blocks/landscaping';
+@import 'blocks/landscaping-form';
 
 // main page
 @import "blocks/news-notice";
