--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -37,13 +37,15 @@
   }
 }
 
-.page-nav__link {
+.page-nav__link,
+.page-nav__radio-label {
   @include main-text;
   font-weight: 500;
   text-decoration: none;
   text-transform: uppercase;
   color: var(--color-text, $grey-default);
   transition: color $style-change-duration;
+  cursor: pointer;
 
   &:hover,
   &:focus {
@@ -77,13 +79,9 @@
 
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
-}
 
-.page-nav__radio-label {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  &:checked + .page-nav__radio-label {
+    color: var(--color-interactive-default, $blue-default);
+    border-bottom: 2px dashed var(--color-interactive-default, $blue-default);
+  }
 }
