добавляет попап для периодов реализации проектов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -170,6 +170,8 @@
 @import "blocks/project-vote";
 @import "blocks/vote-results";
 @import "blocks/vote-popup";
+@import "blocks/projects-note";
+@import "blocks/modal-projects-period";
 
 // poll page
 @import "blocks/poll-page";
