--- a/source/sass/blocks/rating-list.scss
+++ b/source/sass/blocks/rating-list.scss
@@ -13,11 +13,14 @@
 }
 
 .rating-list__item {
-  padding: 31px 0 31px;
+  padding: 32px 0 32px;
   width: 100%;
 
   border-top: 1px solid var(--color-stroke, $light-grey);
-  border-bottom: 1px solid var(--color-stroke, $light-grey);
+
+  &:first-child {
+    border-top: none;
+  }
 
   &--no-border {
     padding-top: 0;
