--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -110,6 +110,7 @@
 @import 'blocks/landscaping';
 @import 'blocks/landscaping-form';
 @import 'blocks/notification-block';
+@import 'blocks/projects-winners';
 
 // main page
 @import "blocks/news-notice";
