--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -113,6 +113,7 @@
 @import 'blocks/deadlines';
 @import 'blocks/notification-block';
 @import 'blocks/projects-winners';
+@import 'blocks/internet-vote';
 
 // main page
 @import "blocks/news-notice";
