Добавляет баннер и убирает лишний отступ у контейнера

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -114,6 +114,7 @@
 @import 'blocks/notification-block';
 @import 'blocks/projects-winners';
 @import 'blocks/internet-vote';
+@import 'blocks/internet-banner';
 
 // main page
 @import "blocks/news-notice";
