--- a/source/components/internet-banner.html
+++ b/source/components/internet-banner.html
@@ -3,7 +3,7 @@
     <div class="internet-banner__container">
       <p class="internet-banner__title">Деревни, сёла и посёлки подключат к мобильному интернету</p>
       <p class="internet-banner__text">Какие первыми ― решать вам</p>
-      <button class="internet-banner__button button button--blue">Проголосовать</button>
+      <a class="internet-banner__button button button--blue" href="#">Проголосовать</a>
     </div>
   </div>
 </div>
