--- a/source/sass/blocks/internet-banner.scss
+++ b/source/sass/blocks/internet-banner.scss
@@ -3,7 +3,7 @@
 
   background-color: $light-blue;
   background-image: url('../img/internet-banner.svg');
-  background-size: cover;
+  background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center;
 }
