Ссылкам на статьи подтягивает текст к иконке на мобильной версии

--- a/source/sass/blocks/internet-vote.scss
+++ b/source/sass/blocks/internet-vote.scss
@@ -108,7 +108,14 @@
     margin-right: 37px;
 
     @include mobile {
+      display: flex;
       margin-top: 20px;
+    }
+
+    &::before {
+      @include mobile {
+        margin-right: 10px;
+      }
     }
   }
 }
