--- a/source/sass/blocks/internet-vote.scss
+++ b/source/sass/blocks/internet-vote.scss
@@ -159,6 +159,14 @@
   border: 1px solid $light-grey;
   box-sizing: border-box;
   border-radius: 5px;
+
+  @include mobile {
+    font-size: 11px;
+  }
+
+  @include mobile-max {
+    font-size: 8px;
+  }
 }
 
 .internet-vote__confirmation-request {
