--- a/source/sass/blocks/internet-vote.scss
+++ b/source/sass/blocks/internet-vote.scss
@@ -2,7 +2,7 @@
   padding-top: 8px;
   padding-bottom: 72px;
 
-  color: $dark-text;
+  color: var(--color-text, $dark-text);
 
   @media (min-width: $tablet-width) {
     padding-bottom: 104px;
@@ -20,7 +20,7 @@
   padding-bottom: 25px;
 
   &:not(:last-of-type) {
-    border-bottom: 1px solid $light-grey;
+    border-bottom: 1px solid var(--color-stroke, $light-grey);
   }
 }
 
@@ -29,14 +29,14 @@
 }
 
 .internet-vote__vote-period {
-  color: $grey-default;
+  color: var(--color-text, $grey-default);
   font-size: rem(16px);
   line-height: 135%;
   font-weight: 400;
 }
 
 .internet-vote__vote-dates {
-  color: $dark-text;
+  color: var(--color-text, $dark-text);
 }
 
 
@@ -87,7 +87,7 @@
           content: "—";
           top: 0;
           left: -15px;
-          color: $blue-default;
+          color: var(--color-interactive-default, $blue-default);
           background-color: transparent;
         }
       }
@@ -154,9 +154,9 @@
   padding: 16px;
   padding-left: 19px;
 
-  background: $white;
+  background: var(--color-bg-main, $white);
 
-  border: 1px solid $light-grey;
+  border: 1px solid var(--color-stroke, $light-grey);
   box-sizing: border-box;
   border-radius: 5px;
 
@@ -187,8 +187,8 @@
   line-height: 130%;
   text-align: left;
 
-  border: 1px solid $light-grey;
-  background-color: $white;
+  border: 1px solid var(--color-stroke, $light-grey);
+  background-color: var(--color-bg-main, $white);
   border-radius: 5px;
 
   cursor: pointer;
@@ -271,7 +271,7 @@
   font-size: rem(16px);
   line-height: 135%;
 
-  background-color: $light-blue;
+  background-color: var(--color-bg-secondary, $light-blue);
   border-radius: 5px;
 
   @include tablet {
@@ -296,7 +296,7 @@
   position: absolute;
   left: 30px;
   top: 24px;
-  color: $blue-default;
+  color: var(--color-interactive-default, $blue-default);
 
   @include tablet {
     left: 22px;
@@ -327,7 +327,7 @@
   margin-right: auto;
   margin-top: 32px;
 
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
 
   @include tablet {
@@ -379,7 +379,7 @@
   }
 
   thead {
-    border-top: 1px solid $light-grey;
+    border-top: 1px solid var(--color-stroke, $light-grey);
 
     th {
       padding-top: 27px;
